<resources>
    <string name="app_name">Бригада</string>
    <string name="content_description_one">content_one</string>
    <string name="content_description_two">content_two</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_not_data">нет данных</string>
    <string name="text_fab_save">Cохранить</string>
    <string name="text_for_snackbar_error_ending_time">Время сдачи меньше времени явки</string>
    <string name="text_for_snackbar_error_empty_date_turnout">Укажите время явки</string>
    <string name="text_for_date_picker_ending">Дата сдачи</string>
    <string name="text_for_date_picker_turnout">Дата явки</string>
    <string name="text_for_time_picker_turnout">Время явки</string>
    <string name="text_for_time_picker_ending">Время сдачи</string>
    <string name="text_for_selector_home_rest">Домашний отдых</string>
    <string name="text_for_selector_point_rest">Отдых в ПО</string>
    <string name="text_for_date_default">"01:01:22"</string>
    <string name="text_through_defise">%1$s:%2$s</string>
    <string name="text_for_date_picker_start_acceptance">Дата начала приемки</string>
    <string name="text_for_time_picker_start_acceptance">Время начала приемки</string>
    <string name="text_for_date_picker_end_acceptance">Дата окончания приемки</string>
    <string name="text_for_time_end_acceptance">Время окончания приемки</string>
    <string name="text_for_snackbar_error_empty_date_start_acceptance">Укажите время начала приемки</string>
    <string name="text_for_snackbar_error_time_end_acceptance">Увеличьте время окончания приемки</string>
    <string name="text_for_snackbar_error_empty_date_start_delivery">Укажите время начала сдачи</string>
    <string name="text_for_snackbar_error_time_end_delivery">Увеличьте время окончания сдачи</string>
    <string name="text_for_date_picker_start_delivery">Дата начала сдачи</string>
    <string name="text_for_time_picker_start_delivery">Время начала сдачи</string>
    <string name="text_for_date_picker_end_delivery">Дата окончания сдачи</string>
    <string name="text_for_time_end_delivery">Время окончания сдачи</string>
    <string name="text_for_empty_data"> - </string>
    <string name="text_for_snackbar_input_less_zero">Нельзя указать отрицательное число</string>
    <string name="text_unit_kilogram">кг</string>
    <string name="text_unit_liter">л</string>
    <string name="text_expense">расход:</string>

    // Header Screen
    <string name="header_train">Поезд</string>
    <string name="header_passenger">Следование пассажиром</string>
    <string name="header_itinerary">Маршрут</string>

    // TrainData Layout
    <string name="hint_number">Номер</string>
    <string name="hint_weight">Вес</string>
    <string name="hint_axle">оси</string>
    <string name="hint_conditional_length">УД</string>
    <string name="text_for_empty_station_list">Добавьте станцию отправления</string>

    // item
    <string name="text_empty"> </string>
    <string name="text_over_time">%1$sч %2$sм</string>
    <string name="text_locomotive_data">%1$s №%2$sм</string>
    <string name="item_placeholder_time_text">00:00</string>
    <string name="item_placeholder_date_text">00</string>
    <string name="item_placeholder_station_text">Участок</string>
    <string name="item_placeholder_loco_text">Локомотив</string>
    <string name="add_loco_subtitle_acceptance">приемка</string>
    <string name="add_loco_subtitle_delivery">сдача</string>

    // Item Station Layout
    <string name="hint_station">Станция</string>
    <string name="hint_empty_time">00:00</string>
    <string name="text_time">%1$s:%2$s</string>

    // block energy
    <string name="subtitle_block_energy_sec_1">Секция 1</string>
    <string name="subtitle_block_energy_sec_2">Секция 2</string>
    <string name="subtitle_block_energy_sec_3">Секция 3</string>
    <string name="subtitle_block_energy_sec_4">Секция 4</string>

    // block diesel fuel
    <string name="subtitle_block_diesel_fuel_sec_1">Секция 1</string>
    <string name="subtitle_block_diesel_fuel_sec_2">Секция 2</string>
    <string name="subtitle_block_diesel_fuel_sec_3">Секция 3</string>
    <string name="subtitle_block_diesel_fuel_sec_4">Секция 4</string>

    // Add Passenger
    <string name="hint_notes">Примечания</string>
    <string name="hint_station_departure">От станции</string>
    <string name="hint_station_arrival">До станции</string>
    <string name="hint_number_train">Поезд №</string>
    <string name="hint_time_departure">Время отправления</string>
    <string name="hint_time_arrival">Время прибытия</string>

    // Add Itinerary
    <string name="hint_itinerary_number">№</string>
    <string name="subtitle_work_time">Время работы</string>
    <string name="subtitle_locomotive">Локомотив</string>
    <string name="subtitle_train">Поезд</string>
    <string name="subtitle_passenger">Следование пасссажиром</string>
    <string name="subtitle_notes">Примечания</string>

</resources>