<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.add_itinerary_screen.AddItineraryFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/topAppBar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@color/transparent"
        app:elevation="28dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_mini"
            app:layout_scrollFlags="exitUntilCollapsed">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="8dp"
                    android:backgroundTint="@color/transparent"
                    android:src="@drawable/ic_back_24" />

                <TextView
                    style="@style/StyleTextTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/header_itinerary"
                    android:textColor="@color/white" />

            </FrameLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:id="@+id/container_add_itinerary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="120dp"
                android:layout_height="45dp"
                android:layout_gravity="end"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                app:hintEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_number_itinerary"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_itinerary_number"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/StyleBackgroundBlocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_background_main_block">

                <TextView
                    android:id="@+id/ending_label"
                    style="@style/StyleTextTitleBlock"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:text="@string/subtitle_work_time"
                    app:layout_constraintEnd_toEndOf="@id/block_ending"
                    app:layout_constraintStart_toStartOf="@id/block_ending"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/block_turnout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:background="@drawable/shape_background_data_block"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp"
                    app:layout_constraintEnd_toStartOf="@id/block_ending"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/block_ending">

                    <TextView
                        android:id="@+id/date_turnout"
                        style="@style/StyleTextDataMini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.2"
                        android:text="@string/text_for_date_default" />

                    <TextView
                        android:id="@+id/time_turnout"
                        style="@style/StyleTextDataMini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.2"
                        android:text="@string/hint_empty_time" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/block_ending"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/shape_background_data_block"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingVertical="4dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/block_turnout"
                    app:layout_constraintTop_toBottomOf="@id/ending_label">

                    <TextView
                        android:id="@+id/data_ending"
                        style="@style/StyleTextDataMini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.2"
                        android:text="@string/text_for_date_default" />

                    <TextView
                        android:id="@+id/time_ending"
                        style="@style/StyleTextDataMini"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:alpha="0.2"
                        android:text="@string/hint_empty_time" />
                </LinearLayout>

                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/selector_rest_point_of_turnover"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/shape_background_tab_layout"
                    app:layout_constraintEnd_toEndOf="@id/block_ending"
                    app:layout_constraintStart_toStartOf="@id/block_turnout"
                    app:layout_constraintTop_toBottomOf="@id/block_ending"
                    app:tabGravity="fill"
                    app:tabIndicator="@drawable/tab_indicator"
                    app:tabIndicatorAnimationMode="elastic"
                    app:tabIndicatorColor="@color/white"
                    app:tabIndicatorGravity="stretch"
                    app:tabMode="fixed"
                    app:tabSelectedTextColor="@color/text_color"
                    app:tabTextAppearance="@style/StyleSecondaryText"
                    app:tabTextColor="@color/text_color" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/StyleBackgroundBlocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_background_main_block">

                <TextView
                    android:id="@+id/loco_label"
                    style="@style/StyleTextTitleBlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_locomotive"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/loco_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loco_label"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_itinerary_loco" />

                <ImageButton
                    android:id="@+id/btn_add_loco"
                    style="@style/StyleMiniFAB"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/loco_recycler_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/StyleBackgroundBlocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_background_main_block">

                <TextView
                    android:id="@+id/train_label"
                    style="@style/StyleTextTitleBlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_train"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/train_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/train_label"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_itinerary_train" />

                <ImageButton
                    android:id="@+id/btn_add_train"
                    style="@style/StyleMiniFAB"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/train_recycler_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/StyleBackgroundBlocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shape_background_main_block">

                <TextView
                    android:id="@+id/passenger_label"
                    style="@style/StyleTextTitleBlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_passenger"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/passenger_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passenger_label"
                    tools:itemCount="2"
                    tools:listitem="@layout/item_itinerary_passenger" />

                <ImageButton
                    android:id="@+id/btn_add_passenger"
                    style="@style/StyleMiniFAB"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/passenger_recycler_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/StyleBackgroundBlocks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="76dp"
                android:background="@drawable/shape_background_main_block">

                <TextView
                    android:id="@+id/notes_label"
                    style="@style/StyleTextTitleBlock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subtitle_notes"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/notes_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/notes_label">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/notes_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_notes" />

                </com.google.android.material.textfield.TextInputLayout>

                <ImageButton
                    android:id="@+id/btn_open_camera"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/white"
                    android:src="@drawable/ic_photo_camera_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/notes_layout" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>